--- a/web/framwork/whhJsFrame/gridMaker/gridMaker_ColDetail_DropDownList.html
+++ b/web/framwork/whhJsFrame/gridMaker/gridMaker_ColDetail_DropDownList.html
@@ -41,14 +41,18 @@
                 <input type="text" class="form-control" id="paraField" placeholder="这个字段的值将作为参数传到后台" ng-model="GridMakerColDropDownListCtrlCache.wz_paraField">
             </div>
             <div class="form-group">
-                <label for="para">自定义参数</label>
-                <input type="text" class="form-control" id="para" placeholder='{"username":"hello"}' ng-model="GridMakerColDropDownListCtrlCache.wz_para">
+                <label>自定义参数</label>
+                <pre id="wz_para" ng-model="GridMakerColDropDownListCtrlCache.wz_para" style="height: 50px;"></pre>
             </div>
         </li>
         <li>
             <div class="form-group">
+             <!--
                 <label>本地数据源(填写url 则该项无效)</label>
                 <textarea class="form-control" rows="4" placeholder='[{"text":"hello","value":"world"}] 属性名必须是text,value' ng-model="GridMakerColDropDownListCtrlCache.wz_data"></textarea>
+             -->
+                <label>本地数据源(填写url 则该项无效)</label>
+                <pre id="wz_data" ng-model="GridMakerColDropDownListCtrlCache.wz_data" style="height: 100px;"></pre>
             </div>
         </li>
     </ul>
