--- a/web/framwork/whhJsFrame/gridMaker/gridMaker_sub1.html
+++ b/web/framwork/whhJsFrame/gridMaker/gridMaker_sub1.html
@@ -3,6 +3,33 @@
 
 
     <ul class="nav nav-pills nav-stacked" ng-mousemove="move()">
+
+<!--
+        <li>
+
+            <div class="row" >
+                <div class="col-md-3">
+                    <input  class="form-control" type="text" placeholder="输入GridName"  id="gridName" ng-model="grid_name" style="margin-bottom: 5px;">
+                </div>
+                <div class="col-md-2">
+                    <a  class="btn btn-success btn-block {{QueryDisable}}" ng-click="queryGridDef()">查询</a>
+                </div>
+                <div class="col-md-2">
+                    <a  class="btn btn-warning btn-block {{NewDisable}}" ng-click="createGridDef()" >新建</a>
+                </div>
+                <div class="col-md-2">
+                    <a  class="btn btn-primary btn-block {{SaveDisable}}" ng-click="saveGridDef()" >保存</a>
+                </div>
+                <div class="col-md-2">
+                    <a  class="btn btn-info btn-block {{newSaveDisable}}" ng-click="saveGridDef()" >另存</a>
+                </div>
+
+
+            </div>
+
+        </li>
+-->
+
         <li>
 
             <div class="row" style="padding-left: 0px;">
