全局替换雅黑字体

--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,12 @@
     <title>WHH Js Demo</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
+    <style>
+
+            body,button, input, select, textarea,h1 ,h2, h3, h4, h5, h6 { font-family: Microsoft YaHei,'宋体' , Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;}
+
+    </style>
+
 
     <link rel="stylesheet" href="framwork/AdminLTE-2.3.0/bootstrap/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="framwork/Font-Awesome-3.2.1/css/font-awesome.css"> -->
@@ -19,6 +25,8 @@
     <link rel="stylesheet" href="framwork/telerik_kendoui_professional_2016_1_266/styles/kendo.common.min.css">
     <link rel="stylesheet" href="framwork/telerik_kendoui_professional_2016_1_266/styles/kendo.material.min.css">
 
+    <link rel="stylesheet" href="framwork/whhJsFrame/css/site.css">
+
     <!--Angular-->
     <script src="framwork/angular-1.5.0/angular.js"></script>
     <script src="framwork/angular-ui-router.js"></script>
@@ -26,6 +34,10 @@
     <script src="appConfig.js"></script>
     <script src="framwork/whhJsFrame/js/appMain.js"></script>
     <script src="framwork/whhJsFrame/js/directives.js"></script>
+
+
+
+
 
 
 </head>
