--- a/web/index.html
+++ b/web/index.html
@@ -177,6 +177,8 @@
 <script src="framwork/whhJsFrame/widgets/whhButton.js"></script>
 <script src="framwork/whhJsFrame/widgets/WhhFileUpload.js"></script>
 <script src="framwork/whhJsFrame/widgets/WhhDropDown.js"></script>
+<script src="framwork/whhJsFrame/widgets/whhDateTimePicker.js"></script>
+
 
 <!--UI控件Demo的js -->
 <script src="pages/demoGrid/gridPage1.js"></script>
@@ -186,6 +188,7 @@
 <script src="pages/demoComboBox/demo1.js"></script>
 <script src="pages/demoFileUpload/demo.js"></script>
 <script src="pages/demoDropDown/demo1.js"></script>
+<script src="pages/otherDemo/dateTimeDemo.js"></script>
 <script src="framwork/whhJsFrame/gridMaker/gridMaker.js"></script>
 
 
