新的文件上传控件

--- a/web/framwork/whhJsFrame/gridMaker/gridMaker_sub1.html
+++ b/web/framwork/whhJsFrame/gridMaker/gridMaker_sub1.html
@@ -97,6 +97,14 @@
                 </div>
 
             </div>
+            <div class="form-group">
+
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" id="virtual" ng-model="GridMakerSub1CtrlCache.wz_virtual">开启virtual(建议1W+数据量时开启 提升Grid性能)
+                    </label>
+                </div>
+            </div>
             <div class="form-group col-md-6" >
                 <label for="height">Grid标题</label>
                 <input type="text" class="form-control" id="title"  ng-model="GridMakerSub1CtrlCache.wz_title" placeholder="Grid的标题">
