--- a/web/index.html
+++ b/web/index.html
@@ -165,6 +165,7 @@
 <script src="framwork/AdminLTE-2.3.0/dist/js/app.js"></script>
 
 <!-- kendo UI -->
+<script src="framwork/Stuk-jszip-f355e18/dist/jszip.js"></script>
 <script src="framwork/telerik_kendoui_professional_2016_1_266/js/kendo.all.min.js"></script>
 <script src="framwork/telerik_kendoui_professional_2016_1_266/js/cultures/kendo.culture.zh-CN.min.js"></script>
 
@@ -178,12 +179,13 @@
 <script src="framwork/whhJsFrame/widgets/WhhFileUpload.js"></script>
 <script src="framwork/whhJsFrame/widgets/WhhDropDown.js"></script>
 <script src="framwork/whhJsFrame/widgets/whhDateTimePicker.js"></script>
-
+<script src="framwork/whhJsFrame/widgets/whhFileUploadORI.js"></script>
 
 <!--UI控件Demo的js -->
 <script src="pages/demoGrid/gridPage1.js"></script>
 <script src="pages/demoGrid/gridPage2.js"></script>
 <script src="pages/demoGrid/gridPage4.js"></script>
+<script src="pages/demoGrid/gridPage5.js"></script>
 <script src="pages/demoDatePicker/datePage1.js"></script>
 <script src="pages/demoComboBox/demo1.js"></script>
 <script src="pages/demoFileUpload/demo.js"></script>
