--- a/web/pages/demoFileUpload/demo.html
+++ b/web/pages/demoFileUpload/demo.html
@@ -3,7 +3,7 @@
 
     <div class="row" style="padding-top: 5px;">
         <div class="col-lg-3">
-            <ng-whh-file-upload option="fileUploadOption"></ng-whh-file-upload>
+            <ng-whh-file-upload-ori option="fileUploadOption"></ng-whh-file-upload-ori>
         </div>
     </div>
     <div class="row" style="padding-top: 5px;">
