--- a/web/pages/demoGrid/gridPage5.html
+++ b/web/pages/demoGrid/gridPage5.html
@@ -2,8 +2,8 @@
 
     <div class="row" style="padding-top: 5px;">
 
-        <div class="col-lg-2" style="padding-left: 0px;">
-            <button class="btn btn-default" ng-click="exportExcel()" style="width: 100%;"> 导出Excel</button>
+        <div class="col-lg-3" style="padding-left: 0px;">
+            <button class="btn btn-default" ng-click="exportExcel()" style="width: 100%;"> 导出Excel数据作为模板</button>
         </div>
         <div class="col-lg-2">
             <button class="btn btn-default" ng-click="deleteAllItems()" style="width: 100%;"> 清空数据 </button>
