--- a/web/pages/otherDemo/dateTimeDemo.html
+++ b/web/pages/otherDemo/dateTimeDemo.html
@@ -11,21 +11,21 @@
 
     <div class="row" style="margin-top: 5px;">
         <div class="col-lg-3" style="padding-left: 0px;" >
-            <button class="btn   btn-success" ng-click="setDate1()" style="width: 100%;"> 设置新日期 2011-12-31 12:23:11
+            <button class="btn   btn-default" ng-click="setDate1()" style="width: 100%;"> 设置新日期 2011-12-31 12:23:11
             </button>
         </div>
         <div class="col-lg-3" >
-            <button class="btn   btn-success" ng-click="setDate2()" style="width: 100%;"> 设置新日期 2015-01-01 12:23:22
-            </button>
-        </div>
-
-        <div class="col-lg-3" >
-            <button class="btn   btn-success" ng-click="getDate()" style="width: 100%;"> getDate
+            <button class="btn   btn-default" ng-click="setDate2()" style="width: 100%;"> 设置新日期 2015-01-01 12:23:22
             </button>
         </div>
 
         <div class="col-lg-3" >
-            <button class="btn   btn-success" ng-click="getDateStr()" style="width: 100%;"> getDateStr 日期字符串
+            <button class="btn   btn-default" ng-click="getDate()" style="width: 100%;"> getDate
+            </button>
+        </div>
+
+        <div class="col-lg-3" >
+            <button class="btn   btn-default" ng-click="getDateStr()" style="width: 100%;"> getDateStr 日期字符串
             </button>
         </div>
     </div>
@@ -33,21 +33,21 @@
 
     <div class="row" style="margin-top: 5px;">
         <div class="col-lg-3" style="padding-left: 0px;">
-            <button class="btn   btn-success" ng-click="getMSeconds()" style="width: 100%;"> 获取毫秒数
+            <button class="btn   btn-default" ng-click="getMSeconds()" style="width: 100%;"> 获取毫秒数
             </button>
         </div>
         <div class="col-lg-2" style="padding-left: 0px;" >
-            <button class="btn   btn-success" ng-click="bind()" style="width: 100%;"> 添加OnChange事件
+            <button class="btn   btn-default" ng-click="bind()" style="width: 100%;"> 添加OnChange事件
             </button>
         </div>
 
         <div class="col-lg-2"  >
-            <button class="btn   btn-success" ng-click="unbind()" style="width: 100%;"> 解除OnChange事件
+            <button class="btn   btn-default" ng-click="unbind()" style="width: 100%;"> 解除OnChange事件
             </button>
         </div>
 
         <div class="col-lg-2"  >
-            <button class="btn   btn-success" ng-click="changeDateByNgModel()" style="width: 100%;"> changeDateByNgModel
+            <button class="btn   btn-default" ng-click="changeDateByNgModel()" style="width: 100%;"> changeDateByNgModel
             </button>
         </div>
 
