--- a/web/pages/demoDropDown/demo1.html
+++ b/web/pages/demoDropDown/demo1.html
@@ -5,24 +5,24 @@
 
 
             <div class="col-lg-2" style="padding-left: 0px;" >
-                <button class="btn   btn-success" ng-click="bind1()" style="width: 100%;"> 添加OnChange事件
+                <button class="btn   btn-default" ng-click="bind1()" style="width: 100%;"> 添加OnChange事件
                 </button>
             </div>
 
             <div class="col-lg-2"  >
-                <button class="btn   btn-success" ng-click="unbind1()" style="width: 100%;"> 解除OnChange事件
+                <button class="btn   btn-default" ng-click="unbind1()" style="width: 100%;"> 解除OnChange事件
                 </button>
             </div>
             <div class="col-lg-2"  >
-                <button class="btn   btn-success" ng-click="getSelectItem()" style="width: 100%;"> 获取选中行
+                <button class="btn   btn-default" ng-click="getSelectItem()" style="width: 100%;"> 获取选中行
                 </button>
             </div>
             <div class="col-lg-2"  >
-                <button class="btn   btn-success" ng-click="selectItem()" style="width: 100%;"> index选中
+                <button class="btn   btn-default" ng-click="selectItem()" style="width: 100%;"> index选中
                 </button>
             </div>
          <div class="col-lg-2"  >
-             <button class="btn   btn-success" ng-click="setValue()" style="width: 100%;"> setValue(双向绑定)
+             <button class="btn   btn-default" ng-click="setValue()" style="width: 100%;"> setValue(双向绑定)
              </button>
          </div>
 
