增加了grid的command功能 单元格中放按钮

--- a/web/index.html
+++ b/web/index.html
@@ -6,12 +6,6 @@
     <title>WHH Js Demo</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
-    <style>
-
-            body,button, input, select, textarea,h1 ,h2, h3, h4, h5, h6 { font-family: Microsoft YaHei,'宋体' , Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;}
-
-    </style>
-
 
     <link rel="stylesheet" href="framwork/AdminLTE-2.3.0/bootstrap/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="framwork/Font-Awesome-3.2.1/css/font-awesome.css"> -->
@@ -117,7 +111,7 @@
         <div class="pull-right hidden-xs  ">
             <b>Version</b> 1.0.0
         </div>
-        <strong> Whh Web开发平台 IM Dept <a href="#">2016-04-01</a></strong>
+        <strong> Whh Web开发平台 WangZheng IM Dept <a href="#">2016-04-01</a></strong>
     </footer>
 
 
@@ -135,7 +129,6 @@
 
 
 </div>
-
 
 <!-- jQuery 2.1.4 -->
 <script src="framwork/AdminLTE-2.3.0/plugins/jQuery/jQuery-2.1.4.min.js"></script>
@@ -186,6 +179,7 @@
 <script src="pages/demoGrid/gridPage2.js"></script>
 <script src="pages/demoGrid/gridPage4.js"></script>
 <script src="pages/demoGrid/gridPage5.js"></script>
+<script src="pages/demoGrid/gridPage6.js"></script>
 <script src="pages/demoDatePicker/datePage1.js"></script>
 <script src="pages/demoComboBox/demo1.js"></script>
 <script src="pages/demoFileUpload/demo.js"></script>
