--- a/web/index.html
+++ b/web/index.html
@@ -111,7 +111,7 @@
         <div class="pull-right hidden-xs  ">
             <b>Version</b> 1.0.0
         </div>
-        <strong> Whh Web开发平台 WangZheng IM Dept <a href="#">2016-04-01</a></strong>
+        <strong> Whh Web开发平台 IM Dept <a href="#">2016-04-01</a></strong>
     </footer>
 
 
